[gd_scene load_steps=4 format=3 uid="uid://b6c4tkqx2v05n"]

[ext_resource type="Script" uid="uid://b5phg7cb23itm" path="res://scenes/ui/turn_order_indicator.gd" id="1_dbnbv"]
[ext_resource type="PackedScene" uid="uid://bfptueu5uw87m" path="res://scenes/ui/character_icon.tscn" id="1_wbjtp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aqxpn"]
bg_color = Color(0.12549, 0.12549, 0.12549, 0.901961)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.32549, 0.32549, 0.32549, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="TurnOrderIndicator" type="MarginContainer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -400.0
offset_bottom = 100.0
grow_horizontal = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_dbnbv")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_aqxpn")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "行动顺序"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="IconsContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="CharacterIcon" parent="PanelContainer/VBoxContainer/IconsContainer" instance=ExtResource("1_wbjtp")]
layout_mode = 2

[node name="CurrentTurnMarker" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
color = Color(1, 0.843137, 0, 1)
